[package]
name = "amethyst-pong-tutorial"
version = "0.1.0"
edition = "2021"

[dependencies]
amethyst = {version = "0.15.3", features = ["no-slow-safety-checks"]}
log = { version = "0.4.14", features = ["serde"] }

[features]
default = ["vulkan"]
empty = ["amethyst/empty"]
metal = ["amethyst/metal"]
vulkan = ["amethyst/vulkan"]

